tests/machine/x/cpp/pure_global_fold.error
line 3: ../../../tests/machine/x/cpp/pure_global_fold.cpp:3:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    3 | auto inc(auto x) { return (x + k); }
      |          ^~~~
../../../tests/machine/x/cpp/pure_global_fold.cpp: In function ‘auto inc(auto:1)’:
../../../tests/machine/x/cpp/pure_global_fold.cpp:3:32: error: ‘k’ was not declared in this scope
    3 | auto inc(auto x) { return (x + k); }
      |                                ^

  2 | 
  3 | auto inc(auto x) { return (x + k); }
  4 | 
